--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         }
         h1, h2, h3, h4, h5, h6 { font-family: 'Orbitron', sans-serif; }
 
+        #home{
+        padding-bottom: 200px;
+        padding-top: 30px;
+        }
+        #stats{
+            padding-top: 3rem;
+        }
         @keyframes gridMove {
             0% { transform: translate(0, 0); }
             100% { transform: translate(60px, 60px); }
@@ -345,7 +352,7 @@
                         </svg>
                     </div>
                     <div class="text-4xl sm:text-5xl font-black bg-gradient-to-r from-pink-400 to-orange-400 bg-clip-text text-transparent mb-2">
-                        <span class="count-number" data-target="5">0</span>+
+                        <span class="count-number" data-target="7">0</span>+
                     </div>
                     <div class="text-sm sm:text-base text-gray-400 font-semibold">Years Experience</div>
                 </div>
@@ -579,7 +586,7 @@
                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                         </svg>
                     </a>
-                    <a href="mailto:rigels@example.com" class="p-3 sm:p-4 bg-gray-900 border border-gray-800 rounded-2xl hover:border-cyan-500 hover:bg-cyan-500/10 transition-all duration-300 hover:scale-110">
+                    <a href="mailto:vasilirigels@gmail.com" class="p-3 sm:p-4 bg-gray-900 border border-gray-800 rounded-2xl hover:border-cyan-500 hover:bg-cyan-500/10 transition-all duration-300 hover:scale-110">
                         <svg class="w-5 sm:w-6 h-5 sm:h-6 text-gray-400 hover:text-cyan-400 transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
@@ -591,7 +598,7 @@
                     <svg class="w-4 sm:w-5 md:w-6 h-4 sm:h-5 md:h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    <span class="break-all">rigels@example.com</span>
+                    <span class="break-all">vasilirigels@gmail.com</span>
                 </a>
             </div>
         </div>
