--- a/index.html
+++ b/index.html
@@ -167,6 +167,23 @@
                 width: 180px !important;
                 max-width: 180px !important;
             }
+            .languages{
+                margin-top: 50px;
+            }
+            .hola-sec{
+                margin-bottom: 50px !important;
+            }
+            #home {
+    padding-bottom: 80px;
+    padding-top: 30px;
+}
+.button-contact{
+    margin-top: 50px;
+    display: block !important;
+}
+.hello-button{
+    width: fit-content;
+}
         }
     </style>
 </head>
@@ -186,7 +203,7 @@
                 
                 <div class="text-center lg:text-left">
                     
-                    <div class="inline-flex items-center gap-2 px-3 sm:px-4 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 mb-4 sm:mb-6" style="animation: fadeInUp 0.6s ease-out;">
+                    <div class="inline-flex items-center hola-sec gap-2 px-3 sm:px-4 py-2 rounded-full bg-cyan-500/10 border border-cyan-500/30 mb-4 sm:mb-6" style="animation: fadeInUp 0.6s ease-out;">
                         <div class="w-2 h-2 rounded-full bg-cyan-400" style="animation: glow 2s ease-in-out infinite;"></div>
                         <span class="text-cyan-400 text-xs sm:text-sm font-medium">Available for Projects • 2026</span>
                     </div>
@@ -199,7 +216,7 @@
                     </h1>
 
                     <div class="text-lg sm:text-xl lg:text-2xl text-cyan-400 font-bold mb-3 sm:mb-4" style="animation: fadeInUp 0.8s ease-out 0.2s backwards;">
-                        Frontend Developer
+                        Software Developer
                     </div>
 
                     <p class="text-sm sm:text-base lg:text-lg text-gray-400 mb-6 sm:mb-8 leading-relaxed max-w-xl mx-auto lg:mx-0" style="animation: fadeInUp 0.8s ease-out 0.3s backwards;">
@@ -209,16 +226,16 @@
                         <span class="text-pink-400">modern web tech</span>.
                     </p>
 
-                    <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 mb-6 sm:mb-8 justify-center lg:justify-start" style="animation: fadeInUp 0.8s ease-out 0.4s backwards;">
-                        <a href="#projects" class="text-center px-6 sm:px-8 py-3 sm:py-4 bg-gradient-to-r from-cyan-500 to-purple-500 rounded-full font-bold text-sm sm:text-base hover:shadow-2xl hover:shadow-cyan-500/50 transition-all duration-300 hover:scale-105">
+                    <div class="flex button-contact flex-col sm:flex-row gap-3 sm:gap-4 mb-6 sm:mb-8 justify-center lg:justify-start" style="animation: fadeInUp 0.8s ease-out 0.4s backwards;">
+                        <a href="#projects" class="text-center hello-button px-6 sm:px-8 py-3 sm:py-4 bg-gradient-to-r from-cyan-500 to-purple-500 rounded-full font-bold text-sm sm:text-base hover:shadow-2xl hover:shadow-cyan-500/50 transition-all duration-300 hover:scale-105">
                             View Projects
                         </a>
-                        <a href="#contact" class="text-center px-6 sm:px-8 py-3 sm:py-4 border-2 border-gray-700 rounded-full font-bold text-sm sm:text-base hover:border-cyan-500 hover:bg-cyan-500/10 transition-all duration-300">
+                        <a href="#contact" class="text-center hello-button  px-6 sm:px-8 py-3 sm:py-4 border-2 border-gray-700 rounded-full font-bold text-sm sm:text-base hover:border-cyan-500 hover:bg-cyan-500/10 transition-all duration-300">
                             Get In Touch
                         </a>
                     </div>
 
-                    <div class="flex flex-wrap gap-2 justify-center lg:justify-start" style="animation: fadeInUp 0.8s ease-out 0.5s backwards;">
+                    <div class="flex languages flex-wrap gap-2 justify-center lg:justify-start" style="animation: fadeInUp 0.8s ease-out 0.5s backwards;">
                         <span class="px-3 py-1.5 bg-gray-900 border border-gray-800 rounded-lg text-xs sm:text-sm text-gray-400 hover:border-cyan-500/50 hover:text-cyan-400 transition-all">Next.js</span>
                         <span class="px-3 py-1.5 bg-gray-900 border border-gray-800 rounded-lg text-xs sm:text-sm text-gray-400 hover:border-cyan-500/50 hover:text-cyan-400 transition-all">React.Js</span>
                         <span class="px-3 py-1.5 bg-gray-900 border border-gray-800 rounded-lg text-xs sm:text-sm text-gray-400 hover:border-cyan-500/50 hover:text-cyan-400 transition-all">TypeScript</span>
